[package]
name = "fuse_docker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuser = "0.12.0"
libc = "0.2.108"
log = "0.4.6"
env_logger = "0.10.0"
bimap = "0.6.2"
bollard = "0.14.0"
tokio = { version = "1.13.0", features = ["full"] }
futures = "0.3.17"
ctrlc = "3.2.0"
sys-mount = "2.0.2"